test/classes/figueroa/BogusDestructors5.chpl
class C {
  def ~foo () {writeln("inside ~foo");}
}
